--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medi-keeper",
+  "name": "item-tracker",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/pro-solid-svg-icons": "^5.15.1",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@tailwindcss/ui": "^0.6.2",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "tailwindcss": "^1.9.3",
+    "unsplash-js": "^6.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
